tests/sema/negative/vec_push_type_mismatch.nv
fn main() : void {
    let xs : vec<int> = vec_new();
    vec_push(xs, "bad");
    return;
}
